# cpp-base

./: CMakeLists.txt  README.md
cmake/: FindCatch.cmake
projects/image_processor/: CMakeLists.txt  Color.cpp  Color.h  Crop.cpp  Crop.h  Grayscale.cpp  Grayscale.h  Negative.cpp  Negative.h  appearance_of_image.cpp  appearance_of_image.h  bmp_header_consts.h  edge_detection.cpp  edge_detection.h  emboss_filter.cpp  emboss_filter.h  exporting_of_bmp.cpp  exporting_of_bmp.h  filter.h  gauss_filter.cpp  gauss_filter.h  image_processor.cpp  matrix_filter.cpp  matrix_filter.h  reading_of_bmp.cpp  reading_of_bmp.h  readme.md  sharpening.cpp  sharpening.h  test.cpp
tasks/admission/: admission.cpp
tasks/associative_operation/: associative_operation.cpp
tasks/cow/: cow_string.cpp  cow_string.h  test.cpp
tasks/mines/: minesweeper.cpp  minesweeper.h
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/poly/: poly.cpp  poly.h
tasks/robot/: CMakeLists.txt  checkers_topology.cpp  checkers_topology.h  field.cpp  field.h  knight_topology.cpp  knight_topology.h  overflow_topology.cpp  overflow_topology.h  planar_topology.cpp  planar_topology.h  point.h  robot.cpp  topology.cpp  topology.h  world.cpp  world.h
tasks/scorer/: scorer.cpp
tasks/scorer2/: scorer.cpp  scorer.h
tasks/search/: search.cpp  test.cpp
tasks/search2/: search.cpp  search.h
tasks/sort_students/: sort_students.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unixpath/: test.cpp  unixpath.cpp
tasks/unixpath2/: unixpath.cpp  unixpath.h
tasks/vector/: vector.cpp  vector.h
(+4 files in other folders)
